--- a/Final_Project/DATS6101_Final_Proj.Rmd
+++ b/Final_Project/DATS6101_Final_Proj.Rmd
@@ -196,16 +196,61 @@ country_summary$cluster <- as.factor(kmeans_result$cluster)
 #### PCA Plot
 
 ```{r}
-library(factoextra)
+# Perform PCA
+pca_result <- prcomp(country_data_scaled, center = TRUE, scale. = TRUE)
 
-# Visualize PCA with clusters
-fviz_pca_ind(prcomp(country_data_scaled), 
-             geom.ind = "point", 
-             col.ind = country_summary$cluster, 
-             palette = "jco", 
-             addEllipses = TRUE, 
-             legend.title = "Cluster") +
-  labs(title = "PCA Plot of Clusters")
+# Calculate variance explained
+variance_explained <- summary(pca_result)$importance[2, ]
+cumulative_variance <- cumsum(variance_explained)
+
+# Identify the number of PCs to explain > 70% variance
+pcs_needed <- which(cumulative_variance >= 0.7)[1]
+
+cat("Number of PCs explaining > 70% variance:", pcs_needed, "\n")
+
+# Create a cumulative variance plot
+library(ggplot2)
+variance_df <- data.frame(
+  PC = 1:length(cumulative_variance),
+  Variance = cumulative_variance
+)
+
+ggplot(variance_df, aes(x = PC, y = Variance)) +
+  geom_line() +
+  geom_point() +
+  geom_hline(yintercept = 0.7, linetype = "dashed", color = "red") +
+  labs(
+    title = "Cumulative Variance Explained by Principal Components",
+    x = "Principal Components",
+    y = "Cumulative Variance Explained"
+  ) +
+  theme_minimal()
+
+# Create a 3D PCA plot with the top PCs
+library(plotly)
+
+pca_top_df <- as.data.frame(pca_result$x[, 1:pcs_needed]) # Include PCs explaining > 70% variance
+pca_top_df$cluster <- country_summary$cluster
+
+plot_ly(
+  data = pca_top_df,
+  x = ~PC1,
+  y = ~PC2,
+  z = ~PC3,
+  color = ~cluster,
+  colors = "Spectral",
+  type = "scatter3d",
+  mode = "markers"
+) %>%
+  layout(
+    title = paste("3D PCA Plot: PCs Explaining", round(cumulative_variance[pcs_needed] * 100, 2), "% Variance"),
+    scene = list(
+      xaxis = list(title = "Principal Component 1"),
+      yaxis = list(title = "Principal Component 2"),
+      zaxis = list(title = "Principal Component 3")
+    )
+  )
+
 ```
 
 #### Summary characteristics for clusters
@@ -381,7 +426,7 @@ ggplot(rank_stability_melted, aes(x = cluster, y = value, fill = variable)) +
 ```{r}
 
 # Attributes
-attributes <- c("avg_loudness", "avg_valence", "avg_danceability",  "avg_instrumentalness", "avg_acousticness", "avg_liveness")
+attributes <- c("avg_loudness", "avg_tempo", "avg_valence", "avg_danceability",  "avg_instrumentalness", "avg_acousticness", "avg_liveness")
 
 # Loop through attributes and perform ANOVA
 anova_results <- lapply(attributes, function(attr) {
